--- a/src/templates/home.html
+++ b/src/templates/home.html
@@ -1,2 +1,5 @@
-<h1>This is home page</h1>
-<p>This is first template</p>
+{% extends 'base.html'%}
+{% block content %}
+  <h1>This is home page</h1>
+	<p>This is first template</p>
+{% endblock %}
