--- a/src/templates/products/detail.html
+++ b/src/templates/products/detail.html
@@ -1,4 +1,13 @@
 {% extends 'base.html'%}
 {% block content %}
-<h1>{{title}}</h1>
+	{% for p in product %}
+		<div class="product">
+			<h1>{{p.title}}</h1>
+			{% if p.description != '' %}
+				<p>{{p.description}}</p>
+			{% else %}
+				<p>Desciption coming soon</p>
+			{%endif%}
+		</div>
+	{% endfor %}
 {% endblock %}
