--- a/src/products/templates/products/product_create.html
+++ b/src/products/templates/products/product_create.html
@@ -2,7 +2,25 @@
 {% block content %}
 <form method="POST">
 	{% csrf_token %}
-	{{form.as_p}}
-	<input type="submit" value="Save"/>
+  <div class="form-group">
+    <label for="title">Title:</label>
+    <input type="text" class="form-control" id="title" name="title" required>
+  </div>
+  <div class="form-group">
+    <label for="Description">Description</label>
+    <textarea class="form-control" name="description"></textarea>
+  </div>
+    <div class="form-group">
+    <label for="price">Price</label>
+    <input type="number" step="0.01" class="form-control" id="price" name="price" required>
+  </div>
+    <div class="form-group">
+    <label for="summary">Summary</label>
+    <textarea type="textarea" class="form-control" id="summary" name="summary" required></textarea>
+  </div>
+  <div class="checkbox">
+    <label><input type="checkbox"> Featured</label>
+  </div>
+  <button type="submit" class="btn btn-primary">Submit</button>
 </form>
 {% endblock %}
