--- a/src/templates/navbar.html
+++ b/src/templates/navbar.html
@@ -10,5 +10,8 @@
     <li class="nav-item">
       <a class="nav-link" href="/products">Products</a>
     </li>
+    <li class="nav-item">
+      <a class="nav-link" href="/add-products">Create Products</a>
+    </li>
   </ul>
 </nav>
