--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -14,9 +14,11 @@
 	<div class="container">
 		<div class="row">
 			<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+				<div style="margin-top: 3%">
 				{% block content %}
 					replace block
 					{% endblock %}
+				</div>
 			</div>
 		</div>
 	</div>
