--- a/src/products/templates/products/product_create.html
+++ b/src/products/templates/products/product_create.html
@@ -2,7 +2,7 @@
 {% block content %}
 <form method="POST">
 	{% csrf_token %}
-  <div class="form-group">
+<!--   <div class="form-group">
     <label for="title">Title:</label>
     <input type="text" class="form-control" id="title" name="title" required>
   </div>
@@ -20,7 +20,8 @@
   </div>
   <div class="checkbox">
     <label><input type="checkbox"> Featured</label>
-  </div>
+  </div> -->
+  {{form.as_p}}
   <button type="submit" class="btn btn-primary">Submit</button>
 </form>
 {% endblock %}
