--- a/src/products/templates/products/product_detail.html
+++ b/src/products/templates/products/product_detail.html
@@ -10,6 +10,28 @@
 			{%endif%}
 			<a href="/product/{{p.id}}">View</a>
 			<a href="/edit-products/{{p.id}}">Edit</a>
+			<a href="#" class="delete" data-toggle="modal" data-target="#exampleModal">Delete</a>
+			<p class="id" style="display:none">{{p.id}}</p>
 		</div>
 	{% endfor %}
+	<div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+		<form method="post">
+			{% csrf_token %}
+      <div class="modal-dialog" role="document">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title" id="exampleModalLabel">Product Delete Confirmation</h5>
+            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+              <span aria-hidden="true">&times;</span>
+            </button>
+          </div>
+          <div class="modal-body"></div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+            <a type="submit" href="/" class="btn btn-primary delete-confirm">Delete</a>
+          </div>
+        </div>
+      </div>
+    </form>
+  </div>
 {% endblock %}
